# core

./: Cargo.toml  README.md
.github/: FUNDING.yml  release_template.md
.github/workflows/: clippy.yml
src/core/: context.rs  error.rs
src/rules/: rule.rs  rules_file.rs
tests/: sorter_test.rs  template_test.rs
