[package]
name = "tooka-core"
version = "1.0.2"
description = "The internal engine powering Tooka"
authors = ["Benjamin Demetz"]
license-file = "LICENSE"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/tooka-org/core"
homepage = "https://tooka.deno.dev"
keywords = ["tooka", "utility", "automation", "file-organizer"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
rust-version = "1.87"


[dependencies]
# Core functionality
trash = "5.2.2"
walkdir = "2.5.0"
rayon = "1.10.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_yaml = "0.9.34"
# Config, Logging and Error handling
anyhow = "1.0.98"
log = "0.4.27"
directories-next = "2.0.0"
flexi_logger = "0.31.0"
thiserror = "2.0.12"
lazy_static = "1.5.0"
# File operations and metadata extraction
regex = "1.11.1"
glob = "0.3.2"
mime_guess = "2.0.5"
kamadak-exif = "0.6.1"
chrono = "0.4.41"
# Output generation
serde_json = "1.0.140"
csv = "1.3.1"
pdf-writer = "0.13.0"


[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
tempfile = "3.20.0"


[[bench]]
name = "sorter_bench"
harness = false


[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"